# EDGAR-Public

./: .gitignore  README.md  build.sbt  docker-compose.yml
.github/workflows/: ci.yml
docker/postgres/init/: 01-extensions.sql
edgar-worker/: pyproject.toml
edgar-worker/src/edgar_worker/: __init__.py  main.py
edgar-worker/tests/: test_smoke.py
eval/src/main/scala/edgar/eval/: Main.scala
eval/src/test/scala/edgar/eval/: MainSpec.scala
modules/api/app/controllers/: HomeController.scala
modules/api/conf/: application.conf  routes
modules/api/test/controllers/: HomeControllerSpec.scala
modules/domain/src/main/scala/edgar/domain/: Module.scala
modules/domain/src/test/scala/edgar/domain/: ModuleSpec.scala
modules/embed/src/main/scala/edgar/embed/: Module.scala
modules/embed/src/test/scala/edgar/embed/: ModuleSpec.scala
modules/ingest/src/main/scala/edgar/ingest/: Module.scala
modules/ingest/src/test/scala/edgar/ingest/: ModuleSpec.scala
modules/price/src/main/scala/edgar/price/: Module.scala
modules/price/src/test/scala/edgar/price/: ModuleSpec.scala
modules/rag/src/main/scala/edgar/rag/: Module.scala
modules/rag/src/test/scala/edgar/rag/: ModuleSpec.scala
modules/retrieval/src/main/scala/edgar/retrieval/: Module.scala
modules/retrieval/src/test/scala/edgar/retrieval/: ModuleSpec.scala
modules/store/src/main/scala/edgar/store/: Module.scala
project/: Dependencies.scala  plugins.sbt
spike/: README.md  edgar_spike.py  pyproject.toml
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
(+3 files in other folders)
