[project]
name = "edgar-worker"
version = "0.1.0"
description = "Python parse-worker: consumes filings.discovered, extracts sections + standardized XBRL via edgartools, publishes filings.parsed."
requires-python = ">=3.12"
dependencies = [
    # edgartools stays version-pinned — upgrades are a dedicated, fixture-verified task
    # (CLAUDE.md hard rule 8).
    "edgartools==5.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edgar_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
